--- a/style.css
+++ b/style.css
@@ -7,113 +7,102 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+    height: 110%;
 }
 
 #main {
-    width: 100%;
     height: 100%;
+    width: 100%;
     background-color: rgb(255, 255, 255);
-    display: grid;
-    grid-template-columns: 25% 25% 50%;
-    grid-template-rows: 25% 55% 35%;
+}
+
+#nav {
+    width: 100%;
+    height: 80px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 30px;
+    padding: 0 30px;
 
 }
 
-#left-top-left {
-    background-color: rgb(255, 255, 255);
-    padding: 5px;
-}
-
-#left-top-right h4 {
+#nav h4 {
     font-size: 20px;
-    font-weight: 500;
-    margin-bottom: 30px;
-    margin: 20px;
-    padding: 0%;
+
 }
 
-#left-top-right h5 {
-    padding-right: 20px;
+#nav i {
+    color: white;
+    background-color: black;
+    border-radius: 50%;
+    font-size: 15px;
+    padding: 10px;
+
 }
 
-#left-top-right {
+#center {
+    width: 100%;
+
     background-color: rgb(255, 255, 255);
-    color: #333;
-    justify-self: right;
+    line-height: 70px;
+    text-transform: capitalize;
+    padding: 40px 80px;
 
-    text-align: right;
-    margin-buttom: 10px;
-    font-size: 20px;
-    font-weight: 100;
 }
 
+#center h1 {
+    font-size: 70px;
+    font-weight: 600;
 
-#left-center {
+
+}
+
+#center-in {
+    height: 200px;
+    width: 100%;
     background-color: rgb(255, 255, 255);
-    grid-column: 1 / 3;
-    font-weight: 50;
-    padding: 40px;
+    margin-top: 0%;
+    padding: 20px 80px;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
 
 }
-
-#left-center h1 {
-    font-size: 5vw;
-    font-weight: 400;
-    line-height: 5vw;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#left-center h1:nth-last-child(2n) {
-
-    text-align: center;
-}
-
-
-#left-bottom {
-    background-color: rgb(255, 255, 255);
-    grid-column: 1 / 3;
-    width: 70%;
-    padding: 30px;
-}
-
-
 
 #right {
-    background-color: rgb(255, 255, 255);
-    grid-column: 3;
-    grid-row: 1 / 4;
-    padding: 20px;
+    width: 20%;
 }
 
-#right video {
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
+.elem {
+    border-top: 2px solid black;
+
+    padding: 15px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 
-#square {
-    background-color: rgba(37, 39, 37, 0.925);
-    width: 20px;
-    height: 20px;
-    rotate: 45deg;
-    margin: 20px;
-
-
-}
-#container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-   /* transform: translate(-50,-50%);*/
+.elem a {
+    color: black;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
 }
 
-i{
-    font-size: 40px;
-    color: rgb(255, 255, 255);
-    background-color: rgb(238, 11, 11);
-    border-radius: 50%;
+.elem i {
+    font-size: 20px;
+    font-weight: 600;
+    opacity: 0;
+}
 
+.elem:hover i {
+    opacity: 1;
 
+}
+
+.elem:hover a {
+    text-decoration: underline;
 }
